--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     }
 
-    #game-board {
+    game-board {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -112,7 +112,7 @@
         margin-bottom: 50px;
 
     }
-    #threetop {
+    threetop {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -121,7 +121,7 @@
         border-color: rgba(235, 244, 160, 0.3);
         border-width: 1px;
     }
-    .letter-box {
+    letter-box {
         border: 2px solid gray;
         border-radius: 3px;
         background-color: rgba(220, 250, 225, 1);
@@ -137,7 +137,7 @@
         font-family: "Helvetica Neue", serif;
     }
 
-    .filled-box {
+    filled-box {
         border: 2px solid darkslategray;
         animation-duration: 0.4s
     }
@@ -146,10 +146,10 @@
         to {margin-bottom: 0; opacity: 1}
     }
 
-    .letter-row {
+    letter-row {
         display: flex;
     }
-    #keyboard-cont {
+    keyboard-cont {
         margin: 1rem 25rem;
         display: flex;
         flex-direction: column;
@@ -165,11 +165,11 @@
         display: flex;
     }
 
-    .second-row {
+    second-row {
         margin: 0.5rem 0;
     }
 
-    .keyboard-button {
+    keyboard-button {
         font-size: 1rem;
         font-weight: 700;
         padding: 0.6rem; /*general widt of key boxes*/
@@ -179,7 +179,7 @@
         font-family: oregonFontSmall, serif;
     }
 
-    .modal2 {
+    modal2 {
         display: none; /* Hidden by default */
         position: fixed; /* Stay in place */
         z-index: 1; /* Sit on top */
