First final index.html
Finalized html code for Waddle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1> &#x1f986 Waddle &#x1f986
+<h1 id = "head"> &#x1f986 Waddle &#x1f986
 </h1>
 
 <div id = "threetop">
@@ -74,10 +74,14 @@
 
 <div id="myModal" class = "popupwindow">
     <div class="modal-content">
-        <p>You Win!</p>
         <div class="close">&times; Close </div>
+        <p id="gameOverMessage">You Win!</p>
+        <div id="gameOverInfo"> T </div>
+        <a href="https://dailyemerald.com/" id="gameOverLink"></a>
         <button id = "resultsbutton">Copy Results</button>
+
     </div>
+
 </div>
 
 
